--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          filter: blob:none
+          clean: true
       - name: try to fix bindings corruption
         run: |
           git config -f .git/config --remove-section submodule.src/o1js-bindings || true
