--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -3,7 +3,7 @@ name: Nightly
 on:
   schedule:
     - cron: '0 0 * * *' # once per day at midnight
-  workflow_dispatch: # can be run with gh workflow run 'Clean nix store'
+  workflow_dispatch: # can be run with gh workflow run nightly.yml
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   # This is the slowest part of the CI now so I think it's better to just do it daily
   # instead of every commit
-  nix-cleanup:
+  Nix-cleanup:
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
