--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
   "dependencies": {
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
+    "cspell": "^8.19.2",
     "isomorphic-fetch": "^3.0.0",
     "js-sha256": "^0.9.0",
     "reflect-metadata": "^0.1.13",
