--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "build:wasm": "./src/bindings/scripts/update-wasm-and-types.sh",
     "build:web": "rimraf ./dist/web && node src/build/build-web.js",
     "build:examples": "npm run build && rimraf ./dist/examples && npx tsc -p tsconfig.examples.json && npx tsc -p benchmark/tsconfig.json",
-    "checkForBindings": "test -d ./src/bindings/compiled || npm run build:bindings-download",
+    "checkForBindings" : "test -d ./src/bindings/compiled || npm run build:bindings-download",
     "build:docs": "npx typedoc",
     "prepublish:web": "npm run checkForBindings && NODE_ENV=production node src/build/build-web.js",
     "prepublish:node": "npm run checkForBindings && node src/build/copy-artifacts.js && rimraf ./dist/node && tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
@@ -83,11 +83,10 @@
   "author": "O(1) Labs",
   "devDependencies": {
     "@influxdata/influxdb-client": "^1.33.2",
-    "@noble/curves": "1.8.1",
     "@noble/hashes": "^1.3.2",
+    "@noble/curves": "1.8.1",
     "@playwright/test": "^1.48.0",
     "@types/jest": "^27.0.0",
-    "@types/libsodium-wrappers-sumo": "^0.7.8",
     "@types/node": "^18.14.2",
     "esbuild": "^0.19.2",
     "expect": "^29.0.1",
@@ -108,16 +107,16 @@
     "typedoc": "^0.27",
     "typedoc-plugin-markdown": "^4.4",
     "typedoc-plugin-merge-modules": "^6.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@types/libsodium-wrappers-sumo": "^0.7.8"
   },
   "dependencies": {
     "blakejs": "1.2.1",
     "cachedir": "^2.4.0",
-    "cspell": "^8.19.2",
     "js-sha256": "^0.9.0",
-    "libsodium-wrappers-sumo": "^0.7.15",
     "reflect-metadata": "^0.1.13",
-    "stacktrace-js": "^2.0.2",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "libsodium-wrappers-sumo": "^0.7.15",
+    "stacktrace-js": "^2.0.2"
   }
 }
