--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -75,7 +75,7 @@ jobs:
   # so the split is nesecary to avoid waiting for the artifact upload too
   Upload-bindings:
     name: upload bindings artifact
-    needs: Prepare
+    needs: [Prepare]
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - name: Set up Nix
