--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -72,8 +72,7 @@ jobs:
 
     runs-on: [ubuntu-latest]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: Setup Node.JS ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
