--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -13,15 +13,18 @@ concurrency:
 
 jobs:
   Build-Doc:
+    strategy:
+      matrix:
+        node: [20]
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Node
+      - name: Setup Node.JS ${{ matrix.node }}
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node }}
       - name: Run typedoc
         run: |
           GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
@@ -48,21 +51,21 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
 
-      - name: Try to merge main into v2
+      - name: Try to merge main into version-next
         run: |
-          git checkout v2
+          git checkout version-next
           git merge origin/main
-          git push origin v2
+          git push origin version-next
         continue-on-error: true
 
       - name: Create Pull Request if merge failed
         if: failure()
         uses: peter-evans/create-pull-request@v6
         with:
-          branch: auto-merge-main-to-v2-${{ github.sha }}
-          title: 'Auto-merge main to v2 (commit ${{ github.sha }})'
-          body: 'This PR was automatically created to merge changes from main into v2. Please resolve conflicts and merge manually.'
-          base: v2
+          branch: auto-merge-main-to-version-next-${{ github.sha }}
+          title: 'Auto-merge main to version-next (commit ${{ github.sha }})'
+          body: 'This PR was automatically created to merge changes from main into version-next. Please resolve conflicts and merge manually.'
+          base: version-next
 
 
   Pkg-pr-new:
@@ -81,14 +84,22 @@ jobs:
         uses: ./.github/actions/build
       - name: Build o1js and mina-signer
         run: |
-          GIT_LFS_SKIP_SMUDGE=1 git submodule update --init --recursive
-          npm ci
           npm run prepublishOnly
           cd src/mina-signer
           npm ci
           npm run prepublishOnly
       - name: Publish o1js and mina-signer on pkg-pr-new
         run: npx pkg-pr-new publish ./ ./src/mina-signer # Enable `--compact` once published to NPM with `repository` in package.json
+
+        # TODO is this redundant with the last step?
+      - name: Publish to NPM if version has changed
+        uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: './src/mina-signer/package.json'
+          strategy: upgrade
+        env:
+          INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 
   Gc-root-bindings:
@@ -97,13 +108,12 @@ jobs:
     needs: Prepare
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
-      - name: Set up Nix
-        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
-      - name: Disable smudging
-        run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: build
+        uses: ./.github/actions/build
       - name: add build to gc-root if on main
         run: |
           nix build o1js#o1js-bindings --out-link /home/app/actions-runner/nix-cache/main-bindings-gcroot
@@ -163,35 +173,3 @@ jobs:
           name: Release ${{ steps.publish.outputs.version }}
           skipIfReleaseExists: true
 
-  Release-mina-signer-on-NPM:
-    if: github.ref == 'refs/heads/main'
-    timeout-minutes: 180
-    runs-on: ubuntu-latest
-    needs: [Build-And-Test-Server, Run-Unit-Tests, Build-And-Test-Web]
-    steps:
-      - name: Restore repository
-        uses: actions/cache@v4
-        with:
-          path: .
-          key: repo-${{ github.sha }}
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Build mina-signer
-        run: |
-          npm ci
-          cd src/mina-signer
-          npm ci
-          npm run prepublishOnly
-
-      - name: Publish to NPM if version has changed
-        uses: JS-DevTools/npm-publish@v3
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          package: './src/mina-signer/package.json'
-          strategy: upgrade
-        env:
-          INPUT_TOKEN: ${{ secrets.NPM_TOKEN }}
