--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -69,32 +69,14 @@ jobs:
         if: steps.get_changed_files.outputs.files_changed == 'true'
         run: xargs npm run lint:strict < changed_files.txt
 
-
-  # The upload job is seperate from the build job because
-  # other workflows have to wait for the cache
-  # so the split is nesecary to avoid waiting for the artifact upload too
-  Upload-bindings:
-    name: upload bindings artifact
-    needs: [Prepare]
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
+  Upload:
+    needs: Prepare
     steps:
-      - name: Set up Nix
-        run: echo "PATH=$PATH:/nix/var/nix/profiles/default/bin" >> $GITHUB_ENV
-      - name: Disable smudging
-        run: echo "GIT_LFS_SKIP_SMUDGE=1" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: generate tar
-        run: |
-          set -Eeu
-          ./pin.sh
-          nix build o1js#bindings-tar --out-link bindings.tar.gz
-      - name: Upload bindings
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings.tar.gz
-          path: bindings.tar.gz
+      - name: dispatch
+        uses: ./.github/workflows/remote_bindings.yml
 
   Build-And-Test-Server:
     needs: Prepare
