--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -3,9 +3,9 @@ on:
   workflow_dispatch:
   workflow_call:
 
+jobs:
   Upload-bindings:
     name: upload bindings artifact
-    needs: [Prepare]
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
     steps:
