--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -72,12 +72,7 @@ jobs:
   Upload:
     needs: [Prepare]
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: dispatch
-        uses: ./.github/workflows/remote_bindings.yml
+    uses: ./.github/workflows/remote_bindings.yml@${{ github.sha }}
 
   Build-And-Test-Server:
     needs: [Prepare]
