--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -69,11 +69,16 @@ jobs:
         if: steps.get_changed_files.outputs.files_changed == 'true'
         run: xargs npm run lint:strict < changed_files.txt
 
-  Upload:
+  Upload-bindings:
+    name: upload bindings artifact
     needs: [Prepare]
-    runs-on: ubuntu-latest
+    runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
-      - uses: ./.github/workflows/remote_bindings.yml@${{ github.sha }}
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: upload
+        uses: ./.github/actions/upload
 
   Build-And-Test-Server:
     needs: [Prepare]
