--- a/.github/workflows/remote_bindings.yml
+++ b/.github/workflows/remote_bindings.yml
@@ -11,15 +11,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build
-        uses: ./.github/actions/build
-      - name: generate tar
-        run: |
-          set -Eeu
-          ./pin.sh
-          nix build o1js#bindings-tar --out-link bindings.tar.gz
-      - name: Upload bindings
-        uses: actions/upload-artifact@v4
-        with:
-          name: bindings.tar.gz
-          path: bindings.tar.gz
+      - name: upload
+        uses: ./.github/actions/upload
+
