fix shell and download script

--- a/.github/actions/upload/action.yml
+++ b/.github/actions/upload/action.yml
@@ -9,6 +9,7 @@ runs:
     - name: Build
       uses: ./.github/actions/build
     - name: generate tar
+      shell: bash
       run: |
         set -Eeu
         ./pin.sh
