try to make ci push to the mina nix cache

--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -105,7 +105,7 @@ jobs:
   Gc-root-bindings:
     name: add a gc root for the latest bindings build
     if: github.ref == 'refs/heads/main'
-    needs: Prepare
+    needs: [Prepare]
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - uses: actions/checkout@v4
