--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,7 +1,4 @@
-n        with:
-          cache_id: ${{ secrets.NIX_CACHE_ID }}
-          nar_secret: ${{ secrets.NIX_CACHE_NAR_SECRET }}
-          gcp_secret: ${{ secrets.NIX_CACHE_GCP_SECRET }}ame: Checks
+name: Checks
 on:
   push:
     branches:
