--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build
         uses: ./.github/actions/build
         with:
-          cache_id: ${{ secrets.NIX_CACHE_ID }}
+          cache_id: ${{ secrets.NIX_CACHE_GCP_ID }}
           nar_secret: ${{ secrets.NIX_CACHE_NAR_SECRET }}
           gcp_secret: ${{ secrets.NIX_CACHE_GCP_SECRET }}
 
