--- a/.github/workflows/push_main.yml
+++ b/.github/workflows/push_main.yml
@@ -1,9 +1,6 @@
 name: Jobs for new commits on main (and similar branches)
 on:
-  workflow_run:
-    workflows: ["checks"]
-    types:
-      - completed
+  push:
     branches:
       - main
       - v1
@@ -108,6 +105,7 @@ jobs:
   Gc-root-bindings:
     name: add a gc root for the latest bindings build
     if: github.ref == 'refs/heads/main'
+    needs: Prepare
     runs-on: [sdk-self-hosted-linux-amd64-build-system]
     steps:
       - uses: actions/checkout@v4
@@ -125,6 +123,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     timeout-minutes: 180
     runs-on: ubuntu-latest
+    needs: [Build-And-Test-Server, Run-Unit-Tests, Build-And-Test-Web]
     steps:
       - name: Restore repository
         uses: actions/cache@v4
