package.json: use Makefile targets instead
The content is the same, except rimraf has been replaced by rm -rf
rimraf is not standard nor installed by default. And the gain to use it is not
significant at our scale.

--- a/package.json
+++ b/package.json
@@ -45,37 +45,38 @@
     "node": ">=18.14.0"
   },
   "scripts": {
-    "dev": "npx tsc -p tsconfig.test.json && node src/build/copy-to-dist.js",
-    "build": "node src/build/copy-artifacts.js && rimraf ./dist/node && npm run dev && node src/build/build-node.js",
-    "build:bindings": "./src/bindings/scripts/build-o1js-node.sh",
-    "build:update-bindings": "./src/bindings/scripts/update-o1js-bindings.sh",
-    "build:wasm": "./src/bindings/scripts/update-wasm-and-types.sh",
-    "build:web": "rimraf ./dist/web && node src/build/build-web.js",
-    "build:examples": "npm run build && rimraf ./dist/examples && npx tsc -p tsconfig.examples.json && npx tsc -p benchmark/tsconfig.json",
-    "build:docs": "npx typedoc",
-    "prepublish:web": "NODE_ENV=production node src/build/build-web.js",
-    "prepublish:node": "node src/build/copy-artifacts.js && rimraf ./dist/node && npx tsc -p tsconfig.node.json && node src/build/copy-to-dist.js && NODE_ENV=production node src/build/build-node.js",
-    "prepublishOnly": "npm run prepublish:web && npm run prepublish:node",
-    "dump-vks": "npm run build && ./run tests/vk-regression/vk-regression.ts --bundle --dump",
-    "format": "prettier --write --ignore-unknown",
-    "format:check": "prettier --check --ignore-unknown",
-    "clean": "rimraf ./dist && rimraf ./src/bindings/compiled/_node_bindings",
-    "clean-all": "npm run clean && rimraf ./tests/report && rimraf ./tests/test-artifacts",
-    "lint": "npx oxlint",
-    "lint:fix": "npx oxlint --fix --fix-suggestions",
-    "lint:strict": "npx oxlint --max-warnings 0",
-    "test": "./run-jest-tests.sh",
-    "test:integration": "./run-integration-tests.sh",
-    "test:unit": "./run-unit-tests.sh",
-    "test:e2e": "rimraf ./tests/report && rimraf ./tests/test-artifacts && npx playwright test",
-    "test:all": "./run-all-local-tests.sh",
-    "e2e:prepare-server": "npm run build:examples && (cp -rf dist/examples dist/web || :) && node src/build/e2e-tests-build-helper.js && cp -rf src/examples/plain-html/index.html src/examples/plain-html/server.js tests/artifacts/html/*.html tests/artifacts/javascript/*.js dist/web",
-    "e2e:run-server": "node dist/web/server.js",
-    "e2e:install": "npx playwright install --with-deps",
-    "e2e:show-report": "npx playwright show-report tests/report",
-    "update-changelog": "./update-changelog.sh",
-    "checkCommit": "./src/bindings/scripts/check-commit.sh",
-    "prepare": "husky"
+    "build": "make build",
+    "build:bindings": "make build-bindings",
+    "build:docs": "make build-docs",
+    "build:examples": "make build-examples",
+    "build:update-bindings": "make update-bindings",
+    "build:wasm": "make build-wasm",
+    "build:web": "make build-web",
+    "checkCommit": "make check-commit",
+    "clean": "make clean",
+    "clean-all": "make clean-all",
+    "dev": "make dev",
+    "dump-vks": "make dump-vks",
+    "e2e:install": "make e2e-install",
+    "e2e:prepare-server": "make e2e-prepare-server",
+    "e2e:run-server": "make e2e-run-server",
+    "e2e:show-report": "make e2e-show-report",
+    "format": "make format",
+    "format:check": "make format-check",
+    "help": "make help",
+    "lint": "make lint",
+    "lint:fix": "make lint-fix",
+    "lint:strict": "make lint-strict",
+    "prepare": "make prepare",
+    "prepublish:node": "make prepublish-node",
+    "prepublish:web": "make prepublish-web",
+    "prepublishOnly": "make prepublish",
+    "test": "make test",
+    "test:all": "make test-all",
+    "test:e2e": "make test-e2e",
+    "test:integration": "make test-integration",
+    "test:unit": "make test-unit",
+    "update-changelog": "make update-changelog"
   },
   "author": "O(1) Labs",
   "devDependencies": {
