--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   Prepare:
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
+    runs-on: self-hosted
     steps:
       - name: Checkout repository with submodules
         uses: actions/checkout@v4
@@ -72,7 +72,7 @@ jobs:
       - name: Run Oxlint
         if: steps.get_changed_files.outputs.files_changed == 'true'
         run: xargs npm run lint:strict < changed_files.txt
-      
+
       - name: Run codespell
         if: steps.get_changed_files.outputs.files_changed == 'true' && github.event.pull_request.labels.*.name != 'no-typo-check'
         uses: codespell-project/actions-codespell@master
@@ -86,7 +86,7 @@ jobs:
   Upload-bindings:
     name: upload bindings artifact
     needs: [Prepare]
-    runs-on: [sdk-self-hosted-linux-amd64-build-system]
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
         with:
