--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Nuke state from last run?
         shell: bash
-        run: sudo rm -rf /home/app/actions-runner/_work/o1js/o1js/
+        run: mkdir /home/app/actions-runner/_work/o1js/o1js/
       - name: Checkout repository with submodules
         uses: actions/checkout@v4
         with:
