upload to nix cache concurently, use github runner for upload step

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -86,7 +86,7 @@ jobs:
   Upload-bindings:
     name: upload bindings artifact
     needs: [Prepare]
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
