--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,12 +9,21 @@ on:
   pull_request: {}
   workflow_dispatch:
     inputs:
+      mina_commit:
+        description: 'mina commit to use'
+        required: false
+        default: ''
       proof_systems_commit:
         description: 'proof_systems commit to use'
         required: false
         default: ''
   workflow_call:
     inputs:
+      mina_commit:
+        description: 'mina commit to use'
+        required: false
+        default: ''
+        type: string
       proof_systems_commit:
         description: 'proof_systems commit to use'
         required: false
@@ -50,6 +59,7 @@ jobs:
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
+          mina_commit: ${{ inputs.mina_commit }}
 
   Lint-Format-and-TypoCheck:
     strategy:
@@ -108,7 +118,7 @@ jobs:
 
   Upload-bindings:
     name: upload bindings artifact
-    if: ${{ inputs.proof_systems_commit == '' }}
+    if: ${{ inputs.proof_systems_commit == ''  && inputs.mina_commit == ''}}
     needs: [Prepare]
     runs-on: ubuntu-latest
     steps:
@@ -156,6 +166,7 @@ jobs:
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
+          mina_commit: ${{ inputs.mina_commit }}
       - name: Prepare for tests
         run: touch profiling.md
       - name: Execute tests
@@ -190,6 +201,7 @@ jobs:
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
+          mina_commit: ${{ inputs.mina_commit }}
       - name: Count tests
         id: count_tests
         run: |
@@ -330,6 +342,7 @@ jobs:
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
+          mina_commit: ${{ inputs.mina_commit }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
@@ -365,6 +378,7 @@ jobs:
           repository: ${{ inputs.target_repo || github.repository }}
           ref: ${{ inputs.target_ref || github.ref }}
           proof_systems_commit: ${{ inputs.proof_systems_commit }}
+          mina_commit: ${{ inputs.mina_commit }}
       - name: Use shared steps for live testing jobs
         uses: ./.github/actions/live-tests-shared
         with:
