try to add develop check

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -313,3 +313,31 @@ jobs:
         uses: ./.github/actions/live-tests-shared
         with:
           mina-branch-name: compatible
+
+  develop:
+    needs: [Prepare]
+    timeout-minutes: 45
+    runs-on: ubuntu-latest
+    services:
+      mina-local-network:
+        image: o1labs/mina-local-network:develop-latest-lightnet
+        env:
+          NETWORK_TYPE: 'single-node'
+          PROOF_LEVEL: 'none'
+        ports:
+          - 3085:3085
+          - 5432:5432
+          - 8080:8080
+          - 8181:8181
+          - 8282:8282
+        volumes:
+          - /tmp:/root/logs
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: build
+        uses: ./.github/actions/build
+      - name: Use shared steps for live testing jobs
+        uses: ./.github/actions/live-tests-shared
+        with:
+          mina-branch-name: develop
