fix secret name here too

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -119,7 +119,7 @@ jobs:
       - name: upload
         uses: ./.github/actions/upload
         with:
-          cache_id: ${{ secrets.NIX_CACHE_ID }}
+          cache_id: ${{ secrets.NIX_CACHE_GCP_ID }}
           nar_secret: ${{ secrets.NIX_CACHE_NAR_SECRET }}
           gcp_secret: ${{ secrets.NIX_CACHE_GCP_SECRET }}
 
